Fix project modal was misaligned

--- a/src/components/project/Project.css
+++ b/src/components/project/Project.css
@@ -44,7 +44,7 @@
 }
 
 .modal-content p {
-    margin-top: 0.5rem;
+    margin-top: 0;
     margin-bottom: 0;
 }
 
